--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-<p>No content</p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lynqi Docs — Сервис сокращения ссылок</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background: #0f1116;
+      color: #e0e0e0;
+    }
+    header {
+      background: #1a1d25;
+      padding: 30px 10%;
+      text-align: center;
+      border-bottom: 1px solid #2a2d36;
+    }
+    header h1 {
+      color: #00b7ff;
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    main {
+      padding: 40px 10%;
+      max-width: 900px;
+      margin: auto;
+      line-height: 1.6;
+    }
+    section {
+      margin-bottom: 50px;
+    }
+    h2 {
+      color: #00b7ff;
+      border-left: 4px solid #00b7ff;
+      padding-left: 10px;
+      font-size: 1.5rem;
+    }
+    a {
+      color: #00b7ff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .button {
+      display: inline-block;
+      background: #00b7ff;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .button:hover {
+      background: #0095d4;
+    }
+    footer {
+      text-align: center;
+      border-top: 1px solid #2a2d36;
+      padding: 20px 10%;
+      color: #999;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Документация Lynqi.click</h1>
+    <p>Частный сервис сокращения ссылок для проектов Malikof</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>О сервисе</h2>
+      <p>
+        <strong>Lynqi.click</strong> — это частный сервис сокращения ссылок, используемый исключительно в проектах,
+        принадлежащих <a href="https://www.malikof.com" target="_blank">Malikof</a>.
+        Владельцы других проектов могут стать частью Malikof и получить доступ к уникальным и стильным ссылкам Lynqi.click.
+      </p>
+    </section>
+
+    <section>
+      <h2>Возможности</h2>
+      <ul>
+        <li>Создание коротких и брендированных ссылок (например, lynqi.click/example)</li>
+        <li>Отслеживание статистики переходов в реальном времени</li>
+        <li>Еженедельные аналитические отчёты, предоставляемые партнёрам</li>
+        <li>Использование собственного кастомного URL (lynqi.click/name) за дополнительную плату</li>
+        <li>Высокая скорость редиректа и надёжная инфраструктура</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Быстрый старт</h2>
+      <p>
+        Хотите использовать Lynqi.click в своём проекте? Подайте заявку на вступление в сеть Malikof, и наша команда свяжется с вами.
+      </p>
+      <p>
+        <a href="https://forms.gle/n3HACGdprkowPy7AA" target="_blank" class="button">Подать заявку на вступление</a>
+      </p>
+    </section>
+
+    <section>
+      <h2>Партнёрство</h2>
+      <p>
+        В данный момент партнёры не имеют доступа к собственной панели управления. Однако Lynqi команда еженедельно
+        предоставляет детальные отчёты по статистике и аналитике для каждого партнёра. В будущем планируется добавить
+        личный кабинет и панель управления ссылками.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Malikof. Все права защищены. Lynqi.click — часть экосистемы Malikof.</p>
+  </footer>
+</body>
+</html>
