--- a/r/new.html
+++ b/r/new.html
@@ -1,207 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Присоединение к Malikof Network</title>
-    <style>
-        :root {
-            --primary-color: #007bff;
-            --secondary-color: #6c757d;
-            --background-color: #f8f9fa;
-            --card-background: #fff;
-            --border-color: #dee2e6;
-            --shadow-color: rgba(0, 0, 0, 0.1);
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: var(--background-color);
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .form-container {
-            background-color: var(--card-background);
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px var(--shadow-color);
-            max-width: 600px;
-            width: 100%;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .header h1 {
-            color: var(--primary-color);
-            margin: 0 0 10px;
-            font-size: 2rem;
-        }
-
-        .header p {
-            color: var(--secondary-color);
-            margin: 0;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-            color: var(--secondary-color);
-        }
-
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            box-sizing: border-box;
-            transition: border-color 0.3s;
-        }
-
-        .form-group input:focus,
-        .form-group select:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            min-height: 100px;
-        }
-
-        .submit-btn {
-            width: 100%;
-            padding: 15px;
-            font-size: 1.1rem;
-            font-weight: 700;
-            color: #fff;
-            background-color: var(--primary-color);
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
-        }
-
-        .submit-btn:hover {
-            background-color: #0056b3;
-            transform: translateY(-2px);
-        }
-
-        .submit-btn:active {
-            transform: translateY(0);
-        }
-
-        .success-message,
-        .error-message {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-            font-weight: 600;
-            display: none;
-        }
-
-        .success-message {
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-
-        .error-message {
-            background-color: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="form-container">
-        <div class="header">
-            <h1>Присоединение к Malikof Network</h1>
-            <p>Заполните форму, чтобы присоединить ваш проект и использовать сервис сокращения ссылок Lynqi.</p>
-        </div>
-
-        <form id="joinProjectForm">
-            <div class="form-group">
-                <label for="projectName">Название проекта</label>
-                <input type="text" id="projectName" name="projectName" required>
-            </div>
-            <div class="form-group">
-                <label for="projectUrl">URL проекта</label>
-                <input type="url" id="projectUrl" name="projectUrl" placeholder="https://example.com" required>
-            </div>
-            <div class="form-group">
-                <label for="projectDescription">Описание проекта</label>
-                <textarea id="projectDescription" name="projectDescription" rows="4" required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="ownerName">Имя ответственного лица</label>
-                <input type="text" id="ownerName" name="ownerName" required>
-            </div>
-            <div class="form-group">
-                <label for="ownerEmail">Электронная почта</label>
-                <input type="email" id="ownerEmail" name="ownerEmail" required>
-            </div>
-            <div class="form-group">
-                <label for="communicationMethod">Предпочтительный способ связи</label>
-                <select id="communicationMethod" name="communicationMethod">
-                    <option value="email">Электронная почта</option>
-                    <option value="telegram">Telegram</option>
-                    <option value="whatsapp">WhatsApp</option>
-                </select>
-            </div>
-            <button type="submit" class="submit-btn">Отправить заявку</button>
-        </form>
-
-        <div id="successMessage" class="success-message">
-            Ваша заявка успешно отправлена! Мы свяжемся с вами в ближайшее время.
-        </div>
-        <div id="errorMessage" class="error-message">
-            Произошла ошибка при отправке заявки. Пожалуйста, попробуйте еще раз.
-        </div>
-    </div>
-
-    <script>
-        document.getElementById('joinProjectForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const form = event.target;
-            const formData = new FormData(form);
-
-            // Здесь вы можете реализовать отправку данных на сервер.
-            // Например, с помощью fetch API.
-            // const data = Object.fromEntries(formData.entries());
-
-            // Имитация успешной отправки для демонстрации.
-            const isSuccess = true; // Замените на реальную логику отправки
-
-            const successMessage = document.getElementById('successMessage');
-            const errorMessage = document.getElementById('errorMessage');
-
-            if (isSuccess) {
-                form.style.display = 'none';
-                successMessage.style.display = 'block';
-            } else {
-                errorMessage.style.display = 'block';
-            }
-        });
-    </script>
-</body>
-</html>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCaP-jfGD2pZiYH3_FXzZFld7Rk8Ua44AJI2BR-HkRu4FAWg/viewform?embedded=true" width="640" height="1283" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
