--- a/r/new.html
+++ b/r/new.html
@@ -1,4 +1,4 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCaP-jfGD2pZiYH3_FXzZFld7Rk8Ua44AJI2BR-HkRu4FAWg/viewform?embedded=true" width="640" height="1283" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 <footer>
-  <p>2025 www.Malikof.com. Все права защищены. Malikof несет ответственность за контент на данном портале.</p>
+  <p>© 2025 www.Malikof.com. Все права защищены. Malikof несет ответственность за контент на данном портале.</p>
 </footer>
